--- a/Makefile.vc
+++ b/Makefile.vc
@@ -32,7 +32,7 @@ ENVIR_ILIB=
 
 all: check-env components reminder
 
-components: libs progs configsamples samples configtutorial tutorial
+components: libs progs configsamples samples configtutorial thetutorial
 
 
 #=====================================================================
@@ -143,7 +143,7 @@ demo:
 	echo @$(WISH:/=\) -f $(OMNETPP_SAMPLES_DIR)/demo/rundemo > $(OMNETPP_SAMPLES_DIR:/=\)\demo\rundemo.bat
 	cd /d $(OMNETPP_SAMPLES_DIR:/=\)\demo && $(MAKE) $(MOPTS) $(MAKEFILE)
 
-tutorial:
+thetutorial:
 	@echo ===== Compiling $@ ====
 	cd /d $(OMNETPP_TUTORIAL_DIR:/=\)\queues && $(MAKE) $(MOPTS) -f queues.mak
 
@@ -186,14 +186,15 @@ configsamples:
 
 configtutorial:
 	@echo ===== Configuring .dsp and .mak files for tutorial/queues =====
-	cd /d $(OMNETPP_TUTORIAL_DIR:/=\)\queues
-	-ren *.cc *.cpp 2>nul
+	-cd /d $(OMNETPP_TUTORIAL_DIR:/=\)\queues && ren *.cc *.cpp 2>nul
+	cd /d $(OMNETPP_TUTORIAL_DIR:/=\)\queues && \
 	$(REPLACE:/=\) queues.dsp.in - "@OMNETPP_INCL_DIR@" "$(OMNETPP_INCL_DIR)" | \
 	$(REPLACE:/=\) -             - "@OMNETPP_LIB_DIR@"  "$(OMNETPP_LIB_DIR)"  | \
 	$(REPLACE:/=\) -             - "@OMNETPP_BIN_DIR@"  "$(OMNETPP_BIN_DIR:/=\)"  | \
 	$(REPLACE:/=\) -             - "@TK_LIB_PATH@" "$(TK_LIB_DIR)" | \
 	$(REPLACE:/=\) -             - "@TCL_LIB@"     "$(TCL_LIB)"    | \
 	$(REPLACE:/=\) -    queues.dsp "@TK_LIB@"      "$(TK_LIB)"
+	cd /d $(OMNETPP_TUTORIAL_DIR:/=\)\queues && \
 	$(REPLACE:/=\) queues.mak.in - "@OMNETPP_INCL_DIR@" "$(OMNETPP_INCL_DIR)" | \
 	$(REPLACE:/=\) -             - "@OMNETPP_LIB_DIR@"  "$(OMNETPP_LIB_DIR)"  | \
 	$(REPLACE:/=\) -             - "@OMNETPP_BIN_DIR@"  "$(OMNETPP_BIN_DIR:/=\)"  | \
