--- a/tutorial/doc_src/Makefile
+++ b/tutorial/doc_src/Makefile
@@ -1,10 +1,26 @@
 #
-# Makefile to produce pdf from the tex sources
+# Makefile to produce pdf & html from the tex sources
 #
 
-all: tutorial.pdf
+TARGET = tutorial
 
-tutorial.pdf: tutorial.tex tutorial.bbl
-	latex tutorial.tex
-	dvipdf tutorial.dvi
-	cp tutorial.pdf ..
+all: pdf
+
+pdf: dvi
+	dvipdf $(TARGET).dvi
+	mv $(TARGET).pdf ..
+
+dvi:
+	latex $(TARGET).tex
+	latex $(TARGET).tex
+
+html:
+	latex2html -split 1 $(TARGET).tex
+	mv $(TARGET) $(TARGET).html
+	mv $(TARGET).html ..
+
+clean:
+	- rm -f $(TARGET).aux
+	- rm -f $(TARGET).dvi
+	- rm -f $(TARGET).log
+	- rm -f $(TARGET).toc
