--- a/src/plove-old/Makefile.vc
+++ b/src/plove-old/Makefile.vc
@@ -31,15 +31,15 @@ OBJS = plove.obj
 all: $(PLOVE_EXE_IF_NEEDED)
 	echo @$(WISH:/=\) -f $(OMNETPP_SRC_DIR)/plove/plove.sh %%1 %%2 %%3 %%4 %%5 %%6 %%7 %%8 %%9 > plove.bat
 	-del $(OMNETPP_BIN_DIR:/=\)\plove.bat $(OMNETPP_BIN_DIR:/=\)\plove.exe 2> nul
-        if "$(PLOVE_EXE_IF_NEEDED)x"=="x"  copy plove.bat $(OMNETPP_BIN_DIR:/=\)
-        if not "$(PLOVE_EXE_IF_NEEDED)x"=="x"  copy plove.exe $(OMNETPP_BIN_DIR:/=\)
+	if "$(PLOVE_EXE_IF_NEEDED)x"=="x"  copy plove.bat $(OMNETPP_BIN_DIR:/=\)
+	if not "$(PLOVE_EXE_IF_NEEDED)x"=="x"  copy plove.exe $(OMNETPP_BIN_DIR:/=\)
 
 plove.bat:
 	echo @$(WISH:/=\) -f $(OMNETPP_SRC_DIR)/plove/plove.sh %%1 %%2 %%3 %%4 %%5 %%6 %%7 %%8 %%9 > plove.bat
-        copy plove.bat $(OMNETPP_BIN_DIR:/=\)
+	copy plove.bat $(OMNETPP_BIN_DIR:/=\)
 
-plove.exe : $(OBJS)
-	$(LINK) /out:"plove.exe" $(OBJS) $(LDFLAGS) $(TK_LIBS) $(SYS_LIBS)
+plove.exe : $(OBJS) plove.res
+	$(LINK) /out:"plove.exe" plove.res $(OBJS) $(LDFLAGS) $(TK_LIBS) $(SYS_LIBS)
 	copy plove.exe $(OMNETPP_BIN_DIR:/=\)
 
 plove.obj: plove.cc tclcode.cc
@@ -47,6 +47,9 @@ plove.obj: plove.cc tclcode.cc
 
 tclcode.cc: *.tcl
 	..\utils\tcl2c tclcode.cc *.tcl
+
+plove.res: plove.rc plove.ico
+	rc -fo plove.res -r plove.rc
 
 missing-library:
 	@ echo *** No Tk installation found -- skipping Plove
