--- a/configure.in
+++ b/configure.in
@@ -114,6 +114,9 @@ AS="as"
 AR="ar cr"
 SHLIB_LD="$CXX -shared"
 NEDC=nedc
+MAKEDEPEND=makedepend
+DEPFLAGS=-Y
+
 if test "$cygwin" = yes; then
     MYPWD="$OMNETPP_SRC_DIR/utils/cygpwd"
 else
@@ -360,6 +363,7 @@ AC_SUBST(AR)
 AC_SUBST(RANLIB)
 AC_SUBST(SHLIB_LD)
 AC_SUBST(WISH)
+AC_SUBST(MAKEDEPEND)
 
 AC_SUBST(A_LIB_SUFFIX)
 AC_SUBST(SO_LIB_SUFFIX)
@@ -372,6 +376,7 @@ AC_SUBST(TK_LIBS)
 AC_SUBST(PVM_CFLAGS)
 AC_SUBST(PVM_LIBS)
 AC_SUBST(SYS_LIBS)
+AC_SUBST(DEPFLAGS)
 
 AC_SUBST(TKENV_IF_POSSIBLE)
 AC_SUBST(SIM_PVM_IF_POSSIBLE)
