--- a/src/nedc/Makefile.in
+++ b/src/nedc/Makefile.in
@@ -5,10 +5,12 @@ CXX=@CXX@
 CC=@CC@
 YACC=@YACC@
 LEX=@LEX@
+MAKEDEPEND=@MAKEDEPEND@
 
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
+DEPFLAGS=@DEPFLAGS@
 
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
 
@@ -57,8 +59,8 @@ jar_mem.o: jar_func.h jar_mem.c
 	$(CXX) -c $(COPTS) jar_mem.c
 
 depend:
-	makedepend -Y -I. -- *.c
-	makedepend -Y -I. -fMakefile.in -- *.c
+	$(MAKEDEPEND) $(DEPFLAGS) -I. -- *.c
+	$(MAKEDEPEND) $(DEPFLAGS) -I. -fMakefile.in -- *.c
 
 clean:
 	rm -f *.o lex.yy.c ebnf.tab.c ebnf.tab.h nedc$(EXE_SUFFIX) *_n.cc
