--- a/src/tkenv/Makefile.in
+++ b/src/tkenv/Makefile.in
@@ -5,8 +5,10 @@ CXX=@CXX@
 AR=@AR@
 SHLIB_LD=@SHLIB_LD@
 RANLIB=@RANLIB@
+MAKEDEPEND=@MAKEDEPEND@
 
 CFLAGS=@CFLAGS@
+DEPFLAGS=@DEPFLAGS@
 
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_BITMAP_PATH=@OMNETPP_BITMAP_PATH@
@@ -83,8 +85,8 @@ missing-library:
 	@ echo '  *** No Tk installation found -- skipping Tkenv'
 
 depend:
-	makedepend -Y -I. -I../envir -I../../include -- *.cc
-	makedepend -Y -I. -I../envir -I../../include -fMakefile.in -- *.cc
+	$(MAKEDEPEND) $(DEPFLAGS) -I. -I../envir -I../../include -- *.cc
+	$(MAKEDEPEND) $(DEPFLAGS) -I. -I../envir -I../../include -fMakefile.in -- *.cc
 
 clean:
 	rm -f *.o tclcode.cc libtkenv$(A_LIB_SUFFIX) libtkenv$(SO_LIB_SUFFIX)
