--- a/src/cmdenv/Makefile.in
+++ b/src/cmdenv/Makefile.in
@@ -5,8 +5,10 @@ CXX=@CXX@
 AR=@AR@
 SHLIB_LD=@SHLIB_LD@
 RANLIB=@RANLIB@
+MAKEDEPEND=@MAKEDEPEND@
 
 CFLAGS=@CFLAGS@
+DEPFLAGS=@DEPFLAGS@
 
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
@@ -49,8 +51,8 @@ heap.o : heap.cc
 	$(CXX) -c $(COPTS) heap.cc
 
 depend:
-	makedepend -Y -I. -I../envir -I../../include -- *.cc
-	makedepend -Y -I. -I../envir -I../../include -fMakefile.in -- *.cc
+	$(MAKEDEPEND) $(DEPFLAGS) -I. -I../envir -I../../include -- *.cc
+	$(MAKEDEPEND) $(DEPFLAGS) -I. -I../envir -I../../include -fMakefile.in -- *.cc
 
 clean:
 	rm -f *.o libcmdenv$(A_LIB_SUFFIX) libcmdenv$(SO_LIB_SUFFIX)
