--- a/src/envir/Makefile.in
+++ b/src/envir/Makefile.in
@@ -5,12 +5,14 @@ CXX=@CXX@
 AR=@AR@
 SHLIB_LD=@SHLIB_LD@
 RANLIB=@RANLIB@
+MAKEDEPEND=@MAKEDEPEND@
 
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
 OMNETPP_VERSION=@OMNETPP_VERSION@
 
 CFLAGS=@CFLAGS@
+DEPFLAGS=@DEPFLAGS@
 
 # LIB_SUFFIX is either A_LIB_SUFFIX or SO_LIB_SUFFIX
 LIB_SUFFIX=@LIB_SUFFIX@
@@ -72,8 +74,8 @@ speedmtr.o : speedmtr.cc
 	$(CXX) -c $(COPTS) speedmtr.cc
 
 depend:
-	makedepend -Y -I. -I../../include -- *.cc
-	makedepend -Y -I. -I../../include -fMakefile.in -- *.cc
+	$(MAKEDEPEND) $(DEPFLAGS) -I. -I../../include -- *.cc
+	$(MAKEDEPEND) $(DEPFLAGS) -I. -I../../include -fMakefile.in -- *.cc
 
 clean:
 	rm -f *.o libenvir$(A_LIB_SUFFIX) libenvir$(SO_LIB_SUFFIX)
