--- a/src/sim/Makefile.in
+++ b/src/sim/Makefile.in
@@ -6,8 +6,10 @@ AS=@AS@
 AR=@AR@
 RANLIB=@RANLIB@
 SHLIB_LD=@SHLIB_LD@
+MAKEDEPEND=@MAKEDEPEND@
 
 CFLAGS=@CFLAGS@
+DEPFLAGS=@DEPFLAGS@
 
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
@@ -169,8 +171,8 @@ missing-library:
 	@ echo '  *** No PVM installation found -- skipping sim_pvm'
 
 depend:
-	makedepend -Y -I. -- *.cc
-	makedepend -Y -I. -fMakefile.in -- *.cc
+	$(MAKEDEPEND) $(DEPFLAGS) -I. -- *.cc
+	$(MAKEDEPEND) $(DEPFLAGS) -I. -fMakefile.in -- *.cc
 
 clean:
 	rm -f *.o std/*.o pvm/*.o
