--- a/src/utils/Makefile.in
+++ b/src/utils/Makefile.in
@@ -3,10 +3,12 @@
 #
 CXX=@CXX@
 CC=@CC@
+MAKEDEPEND=@MAKEDEPEND@
 
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
+DEPFLAGS=@DEPFLAGS@
 
 COPTS=$(CFLAGS)
 
@@ -24,8 +26,8 @@ tcl2c: tcl2c.c
 	$(CC) tcl2c.c -o tcl2c
 
 depend:
-	makedepend -Y -I. -- *.cc
-	makedepend -Y -I. -fMakefile.in -- *.cc
+	$(MAKEDEPEND) $(DEPFLAGS) -I. -- *.cc
+	$(MAKEDEPEND) $(DEPFLAGS) -I. -fMakefile.in -- *.cc
 
 clean:
 	rm -f *.o seedtool$(EXE_SUFFIX) tcl2c$(EXE_SUFFIX)
