--- a/src/utils/opp_makemake.in
+++ b/src/utils/opp_makemake.in
@@ -236,10 +236,12 @@ CXX=@CXX@
 CC=@CC@
 AR=@AR@
 SHLIB_LD=@SHLIB_LD@
+MAKEDEPEND=@MAKEDEPEND@
 
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
+DEPFLAGS=@DEPFLAGS@
 
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
@@ -261,10 +263,12 @@ CXX=@${null}CXX@
 CC=@${null}CC@
 AR=@${null}AR@
 SHLIB_LD=@${null}SHLIB_LD@
+MAKEDEPEND=@${null}MAKEDEPEND@
 
 CFLAGS=@${null}CFLAGS@
 LDFLAGS=@${null}LDFLAGS@
 EXE_SUFFIX=@${null}EXE_SUFFIX@
+DEPFLAGS=@${null}DEPFLAGS@
 
 OMNETPP_INCL_DIR=@${null}OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@${null}OMNETPP_LIB_DIR@
@@ -378,8 +382,8 @@ clean:
 	rm -f *.vec *.sca
 
 depend:
-	makedepend -Y \$(INCLUDE_PATH) -- *.cc
-	makedepend -Y \$(INCLUDE_PATH) -fMakefile.in -- *.cc
+	\$(MAKEDEPEND) \$(DEPFLAGS) \$(INCLUDE_PATH) -- *.cc
+	\$(MAKEDEPEND) \$(DEPFLAGS) \$(INCLUDE_PATH) -fMakefile.in -- *.cc
 
 re-makemake:
 	opp_makemake -f $args1  #recreate Makefile
@@ -394,3 +398,4 @@ EOT
 ) > $outputfile
 
 echo "$outputfile created -- type 'make depend' to add dependencies to it"
+
