--- a/samples/fifo2/Makefile.in
+++ b/samples/fifo2/Makefile.in
@@ -11,7 +11,6 @@ TARGET = fifo2
 # User interface (uncomment one) (-u option)
 # USERIF_LIBS=$(CMDENV_LIBS)
 USERIF_LIBS=$(TKENV_LIBS)
-# USERIF_LIBS=$(TVENV_LIBS)
 
 # Uncomment the second line for parallel execution (PVM3) support (-p option):
 KERNEL_LIBS=$(STD_KERNEL_LIBS)
@@ -36,22 +35,23 @@ CXX=@CXX@
 CC=@CC@
 AR=@AR@
 SHLIB_LD=@SHLIB_LD@
+MAKEDEPEND=@MAKEDEPEND@
 
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
+DEPFLAGS=@DEPFLAGS@
 
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
 
-TV_LIBS=@TV_LIBS@
 TK_LIBS=@TK_LIBS@
 PVM_LIBS=@PVM_LIBS@
 SYS_LIBS=@SYS_LIBS@
+SYS_LIBS_PURE=-lm $(shell $(CXX) -print-file-name=libstdc++.a)
 
 # User interface libs
 CMDENV_LIBS=-lenvir -lcmdenv
-TVENV_LIBS=-lenvir -ltvenv $(TV_LIBS)
 TKENV_LIBS=-lenvir -ltkenv $(TK_LIBS)
 
 # Simulation kernel
@@ -66,10 +66,13 @@ COPTS=$(CFLAGS) $(INCLUDE_PATH) -I$(OMNETPP_INCL_DIR)
 #------------------------------------------------------------------------------
 
 # Object files from this directory to link
-OBJS= fifo2_n.o fifonet2_n.o gen2_n.o sink2_n.o fifo2.o  gen2.o sink2.o
+OBJS= fifo2_n.o fifonet2_n.o gen2_n.o sink2_n.o fifo2.o gen2.o sink2.o
 
 $(TARGET): $(OBJS) $(EXRA_OBJS) Makefile
 	$(CC) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) $(OMNETPP_LIBS) -o $(TARGET)
+
+purify: $(OBJS) $(EXRA_OBJS)   Makefile
+	purify $(CC) $(LDFLAGS) $(OBJS) $(EXRA_OBJS) $(SUBDIR_OBJS) $(LIBS) -L$(OMNETPP_LIB_DIR) $(KERNEL_LIBS) $(USERIF_LIBS) $(SYS_LIBS_PURE) -o $(TARGET).pure
 
 fifo2_n.o: fifo2_n.cc
 	$(CXX) -c $(COPTS) fifo2_n.cc
@@ -109,8 +112,8 @@ clean:
 	rm -f *.vec *.sca
 
 depend:
-	makedepend -Y $(INCLUDE_PATH) -- *.cc
-	makedepend -Y $(INCLUDE_PATH) -fMakefile.in -- *.cc
+	$(MAKEDEPEND) $(DEPFLAGS) $(INCLUDE_PATH) -- *.cc
+	$(MAKEDEPEND) $(DEPFLAGS) $(INCLUDE_PATH) -fMakefile.in -- *.cc
 
 re-makemake:
 	opp_makemake -f    #recreate Makefile
@@ -120,4 +123,3 @@ re-makemake-m:
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
-fifo2.o: fifo2.h
