--- a/tutorial/queues/Makefile.in
+++ b/tutorial/queues/Makefile.in
@@ -35,10 +35,12 @@ CXX=@CXX@
 CC=@CC@
 AR=@AR@
 SHLIB_LD=@SHLIB_LD@
+MAKEDEPEND=@MAKEDEPEND@
 
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
+DEPFLAGS=@DEPFLAGS@
 
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
@@ -119,8 +121,8 @@ clean:
 	rm -f *.vec *.sca
 
 depend:
-	makedepend -Y $(INCLUDE_PATH) -- *.cc
-	makedepend -Y $(INCLUDE_PATH) -fMakefile.in -- *.cc
+	$(MAKEDEPEND) $(DEPFLAGS) $(INCLUDE_PATH) -- *.cc
+	$(MAKEDEPEND) $(DEPFLAGS) $(INCLUDE_PATH) -fMakefile.in -- *.cc
 
 re-makemake:
 	opp_makemake -f    #recreate Makefile
