*** empty log message ***

--- a/configure.in
+++ b/configure.in
@@ -114,8 +114,7 @@ AS="as"
 AR="ar cr"
 SHLIB_LD="$CXX -shared"
 NEDC=nedc
-MAKEDEPEND=makedepend
-DEPFLAGS=-Y
+MAKEDEPEND=makedepend -Y
 
 if test "$cygwin" = yes; then
     MYPWD="$OMNETPP_SRC_DIR/utils/cygpwd"
@@ -372,7 +371,6 @@ AC_SUBST(TK_LIBS)
 AC_SUBST(PVM_CFLAGS)
 AC_SUBST(PVM_LIBS)
 AC_SUBST(SYS_LIBS)
-AC_SUBST(DEPFLAGS)
 
 AC_SUBST(TKENV_IF_POSSIBLE)
 AC_SUBST(SIM_PVM_IF_POSSIBLE)
