--- a/src/cmdenv/Makefile.in
+++ b/src/cmdenv/Makefile.in
@@ -8,7 +8,6 @@ RANLIB=@RANLIB@
 MAKEDEPEND=@MAKEDEPEND@
 
 CFLAGS=@CFLAGS@
-DEPFLAGS=@DEPFLAGS@
 
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
@@ -51,8 +50,8 @@ heap.o : heap.cc
 	$(CXX) -c $(COPTS) heap.cc
 
 depend:
-	$(MAKEDEPEND) $(DEPFLAGS) -I. -I../envir -I../../include -- *.cc
-	$(MAKEDEPEND) $(DEPFLAGS) -I. -I../envir -I../../include -fMakefile.in -- *.cc
+	$(MAKEDEPEND) -I. -I../envir -I../../include -- *.cc
+	$(MAKEDEPEND) -I. -I../envir -I../../include -fMakefile.in -- *.cc
 
 clean:
 	rm -f *.o libcmdenv$(A_LIB_SUFFIX) libcmdenv$(SO_LIB_SUFFIX)
