--- a/src/envir/Makefile.in
+++ b/src/envir/Makefile.in
@@ -12,7 +12,6 @@ OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
 OMNETPP_VERSION=@OMNETPP_VERSION@
 
 CFLAGS=@CFLAGS@
-DEPFLAGS=@DEPFLAGS@
 
 # LIB_SUFFIX is either A_LIB_SUFFIX or SO_LIB_SUFFIX
 LIB_SUFFIX=@LIB_SUFFIX@
@@ -74,8 +73,8 @@ speedmtr.o : speedmtr.cc
 	$(CXX) -c $(COPTS) speedmtr.cc
 
 depend:
-	$(MAKEDEPEND) $(DEPFLAGS) -I. -I../../include -- *.cc
-	$(MAKEDEPEND) $(DEPFLAGS) -I. -I../../include -fMakefile.in -- *.cc
+	$(MAKEDEPEND) -I. -I../../include -- *.cc
+	$(MAKEDEPEND) -I. -I../../include -fMakefile.in -- *.cc
 
 clean:
 	rm -f *.o libenvir$(A_LIB_SUFFIX) libenvir$(SO_LIB_SUFFIX)
