--- a/src/gned/Makefile.in
+++ b/src/gned/Makefile.in
@@ -10,7 +10,6 @@ MAKEDEPEND=@MAKEDEPEND@
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
-DEPFLAGS=@DEPFLAGS@
 
 OMNETPP_BITMAP_PATH=@OMNETPP_BITMAP_PATH@
 OMNETPP_BIN_DIR=@OMNETPP_BIN_DIR@
@@ -80,8 +79,8 @@ missing-library:
 	@ echo '  *** No Tk installation found -- skipping GNED'
 
 depend:
-	$(MAKEDEPEND) $(DEPFLAGS) -I. -- *.c *.cc
-	$(MAKEDEPEND) $(DEPFLAGS) -I. -fMakefile.in -- *.c *.cc
+	$(MAKEDEPEND) -I. -- *.c *.cc
+	$(MAKEDEPEND) -I. -fMakefile.in -- *.c *.cc
 
 clean:
 	rm -f tclcode.cc *.o lex.yy.c ebnf.tab.c ebnf.tab.h gned$(EXE_SUFFIX)
