--- a/src/utils/Makefile.in
+++ b/src/utils/Makefile.in
@@ -8,7 +8,6 @@ MAKEDEPEND=@MAKEDEPEND@
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
-DEPFLAGS=@DEPFLAGS@
 
 COPTS=$(CFLAGS)
 
@@ -26,8 +25,8 @@ tcl2c: tcl2c.c
 	$(CC) tcl2c.c -o tcl2c
 
 depend:
-	$(MAKEDEPEND) $(DEPFLAGS) -I. -- *.cc
-	$(MAKEDEPEND) $(DEPFLAGS) -I. -fMakefile.in -- *.cc
+	$(MAKEDEPEND) -I. -- *.cc
+	$(MAKEDEPEND) -I. -fMakefile.in -- *.cc
 
 clean:
 	rm -f *.o seedtool$(EXE_SUFFIX) tcl2c$(EXE_SUFFIX)
