--- a/src/utils/opp_makemake.in
+++ b/src/utils/opp_makemake.in
@@ -241,7 +241,6 @@ MAKEDEPEND=@MAKEDEPEND@
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@
 EXE_SUFFIX=@EXE_SUFFIX@
-DEPFLAGS=@DEPFLAGS@
 
 OMNETPP_INCL_DIR=@OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@OMNETPP_LIB_DIR@
@@ -268,7 +267,6 @@ MAKEDEPEND=@${null}MAKEDEPEND@
 CFLAGS=@${null}CFLAGS@
 LDFLAGS=@${null}LDFLAGS@
 EXE_SUFFIX=@${null}EXE_SUFFIX@
-DEPFLAGS=@${null}DEPFLAGS@
 
 OMNETPP_INCL_DIR=@${null}OMNETPP_INCL_DIR@
 OMNETPP_LIB_DIR=@${null}OMNETPP_LIB_DIR@
@@ -382,8 +380,8 @@ clean:
 	rm -f *.vec *.sca
 
 depend:
-	\$(MAKEDEPEND) \$(DEPFLAGS) \$(INCLUDE_PATH) -- *.cc
-	\$(MAKEDEPEND) \$(DEPFLAGS) \$(INCLUDE_PATH) -fMakefile.in -- *.cc
+	\$(MAKEDEPEND) \$(INCLUDE_PATH) -- *.cc
+	\$(MAKEDEPEND) \$(INCLUDE_PATH) -fMakefile.in -- *.cc
 
 re-makemake:
 	opp_makemake -f $args1  #recreate Makefile
